--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .al-container {
+        @apply container mx-auto max-w-7xl px-2 sm:px-4 lg:px-8;
+    }
+}
