--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    :root {
+        --color-primary: 238 95 83; /* #ee5f53 */
+        --color-primary-light: 241 145 139; /*  #f1918b */
+        --color-secondary: 23 51 83; /*  #173353 */
+        --color-secondary-light: 55 80 110; /*  #37506e */
+        --color-green-light: 0 221 130; /*  #00dd82 */
+        --color-green: 64 151 157; /*  #40979d */
+        --color-beige: 216 215 193; /*  #d8d7c1 */
+        --color-beige-light: 239 232 223; /*  #efe8df */
+        --color-beige-gray: 155 155 155; /*  #9b9b9b */
+        --color-gray: 109 110 113; /*  #6d6e71 */
+        --color-linkedin-blue: 23 134 177; /*  #1786b1 */
+        --color-javascript: 255 215 0; /*  #ffd700 */
+        --color-firebase: 255 153 0; /*  #ff9900 */
+        --color-node: 62 134 61; /*  #3e863d */
+        --color-backend: 77 19 0; /*  #4d1300 */
+        --color-css: 163 13 138; /*  #a30d8a */
+        --color-typescript: 48 117 191; /*  #3075bf */
+        --color-nestjs: 212 33 72; /*  #d42148 */
+        --color-nuxtjs: 2 40 50; /*  #022832 */
+        --color-vscode: 58 168 240; /*  #3aa8f0 */
+        --color-vite: 189 52 254; /*  #bd34fe */
+        --color-other: 238 95 83; /*  #ee5f53 */
+    }
+
+    html {
+        @apply bg-beige-light;
+    }
+
+    ::selection {
+        @apply bg-primary text-secondary;
+    }
+}
+
 @layer components {
     .al-container {
         @apply container mx-auto max-w-7xl px-2 sm:px-4 lg:px-8;
