subscribe form with footer has been done

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
         --colour-beige-light: 239 232 223; /*  #efe8df */
         --colour-beige-gray: 155 155 155; /*  #9b9b9b */
         --colour-gray: 109 110 113; /*  #6d6e71 */
+        --colour-gray-secondary: 116 134 155; /*  #74869b */
         --colour-linkedin-blue: 23 134 177; /*  #1786b1 */
         --colour-javascript: 255 215 0; /*  #ffd700 */
         --colour-firebase: 255 153 0; /*  #ff9900 */
