fix(app.vue): add HomeButton component to the main section of the app when applyBlogClass is true fix(main.css): add focus and outline styles to the pointer-events-none class in the blog-page section fix(Button.vue): replace router-link with NuxtLink component and update button classes and styles feat(HomeButton.vue): add new HomeButton component fix(NavBar.vue): add focus:outline-none class to the NuxtLink component

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,7 @@
     } */
 
     .blog-page a {
-        @apply pointer-events-none;
+        @apply pointer-events-none focus:outline-primary focus:outline-offset-4;
     }
 
     ::selection {
