Added new tags and new post

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,8 @@
         --colour-vscode: 58 168 240; /*  #3aa8f0 */
         --colour-vite: 189 52 254; /*  #bd34fe */
         --colour-mustard: 255 195 29; /*  #ffc31d */
+        --colour-ai: 3 227 252; /*  #03e3fc */
+        --colour-langchain: 111 252 3; /*  #6ffc03 */
         --colour-other: 238 95 83; /*  #ee5f53 */
     }
 
