--- a/emails/newsletters.mjml
+++ b/emails/newsletters.mjml
@@ -13,7 +13,7 @@
     </mj-head>
     <mj-body background-color="#e0f2ff">
         <mj-section background-color="#173353">
-            <mj-column width="45%">
+            <mj-column width="35%">
                 <mj-image
                     href="https://www.trpkovski.com"
                     src="https://res.cloudinary.com/suv4o/image/upload/f_auto,w_70/v1697884715/blog/logo"
@@ -23,15 +23,15 @@
                     padding="0px 10px"
                 ></mj-image>
             </mj-column>
-            <mj-column width="55%">
+            <mj-column width="65%">
                 <mj-navbar base-url="https://www.trpkovski.com" hamburger="hamburger" ico-color="#ee5f53">
-                    <mj-navbar-link font-size="16px" href="https://www.trpkovski.com" color="#ffffff"
+                    <mj-navbar-link font-size="20px" href="https://www.trpkovski.com" color="#ffffff"
                         >home</mj-navbar-link
                     >
-                    <mj-navbar-link font-size="16px" href="https://www.trpkovski.com/articles" color="#ffffff"
+                    <mj-navbar-link font-size="20px" href="https://www.trpkovski.com/articles" color="#ffffff"
                         >articles</mj-navbar-link
                     >
-                    <mj-navbar-link font-size="16px" href="https://www.trpkovski.com/get-in-touch" color="#ffffff"
+                    <mj-navbar-link font-size="20px" href="https://www.trpkovski.com/get-in-touch" color="#ffffff"
                         >get in touch</mj-navbar-link
                     >
                 </mj-navbar>
@@ -51,23 +51,16 @@
                     font-size="24px"
                     font-family="Ubuntu, Helvetica, Arial, sans-serif"
                     padding="0px 10px"
+                    line-height="170%"
                 >
                     <p>Hey {{subscriber_name}},</p>
                     <p>
                         I am excited to share with you my latest article,
-                        <a href="{{blog_url}}" style="text-decoration: none; color: #ee5f53; font-weight: bold"
-                            >{{blog_name}}</a
-                        >
+                        <a href="{{blog_url}}" style="text-decoration: none; color: #ee5f53">{{blog_name}}</a>
                     </p>
-                    <p>
-                        In this article, I delve deep into {{blog_briefly_describe}}. Whether you're an experienced
-                        developer or just starting your journey in web development, there's valuable information for
-                        everyone.
-                    </p>
+                    <p>In this article, I delve deep into {{blog_briefly_describe}}.</p>
                     <p>Here are some highlights:</p>
-                    <ul>
-                        <li>{{blog_highlight}}</li>
-                    </ul>
+                    {{blog_highlights}}
                     <p>Thank you for being a part of my web development community.</p>
                     <p>Happy coding!</p>
                     <p>Warm regards,</p>
@@ -81,7 +74,6 @@
                     font-size="16px"
                     align="center"
                     color="#ffffff"
-                    font-size="13px"
                     padding-left="25px"
                     padding-right="25px"
                     padding-bottom="0px"
@@ -89,26 +81,12 @@
                 >
                     <p>
                         <a
-                            href="https://unsubscribe-to-newsletters-l3igmdcjra-uc.a.run.app/{{subscriber_id}}"
-                            style="text-decoration: none; color: inherit"
+                            href="https://www.trpkovski.com/unsubscribe/{{subscriber_id}}"
+                            style="text-decoration: none; color: inherit; font-size: 20px"
                             >Unsubscribe</a
                         >
                     </p>
                 </mj-text>
-            </mj-column>
-            <mj-column>
-                <mj-social padding-top="30px">
-                    <mj-social-element name="twitter" href="https://twitter.com/aleks_trpkovski"></mj-social-element>
-                    <mj-social-element
-                        name="linkedin"
-                        href="https://www.linkedin.com/in/aleksandar-trpkovski"
-                    ></mj-social-element>
-                    <mj-social-element name="github" href="https://github.com/Suv4o"></mj-social-element>
-                    <mj-social-element
-                        name="instagram"
-                        href="https://www.instagram.com/aleksandar_trpkovski"
-                    ></mj-social-element>
-                </mj-social>
             </mj-column>
         </mj-section>
     </mj-body>
