--- a/emails/newsletters.mjml
+++ b/emails/newsletters.mjml
@@ -81,7 +81,7 @@
                 >
                     <p>
                         <a
-                            href="https://www.trpkovski.com/unsubscribe/{{subscriber_id}}"
+                            href="https://www.trpkovski.com/unsubscribe?id={{subscriber_id}}"
                             style="text-decoration: none; color: inherit; font-size: 20px"
                             >Unsubscribe</a
                         >
