added new article

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@
         --colour-mustard: 255 195 29; /*  #ffc31d */
         --colour-ai: 3 227 252; /*  #03e3fc */
         --colour-langchain: 111 252 3; /*  #6ffc03 */
+        --colour-python: 53 107 153; /*  #356B99 */
         --colour-other: 238 95 83; /*  #ee5f53 */
     }
 
