--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@
         --colour-ai: 3 227 252; /*  #03e3fc */
         --colour-langchain: 111 252 3; /*  #6ffc03 */
         --colour-python: 53 107 153; /*  #356B99 */
+        --colour-nitro: 247 119 176; /*  #f777b0 */
         --colour-other: 238 95 83; /*  #ee5f53 */
     }
 
