--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,7 @@
         --colour-langchain: 111 252 3; /*  #6ffc03 */
         --colour-python: 53 107 153; /*  #356B99 */
         --colour-nitro: 247 119 176; /*  #f777b0 */
+        --colour-reactjs: 97 218 251; /*  #61dafb */
         --colour-other: 238 95 83; /*  #ee5f53 */
     }
 
