--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,220 +1,230 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@config "../../tailwind.config.js";
 
-@layer base {
-    :root {
-        --colour-primary: 238 95 83; /* #ee5f53 */
-        --colour-primary-light: 241 145 139; /*  #f1918b */
-        --colour-code-inline-blue: 41 90 146; /*  #295a92 */
-        --colour-secondary: 23 51 83; /*  #173353 */
-        --colour-secondary-light: 55 80 110; /*  #37506e */
-        --colour-green-light: 0 221 130; /*  #00dd82 */
-        --colour-green-blue: 191 217 219; /*  #bfd9db */
-        --colour-green: 64 151 157; /*  #40979d */
-        --colour-beige: 216 215 193; /*  #d8d7c1 */
-        --colour-beige-light: 239 232 223; /*  #efe8df */
-        --colour-beige-gray: 155 155 155; /*  #9b9b9b */
-        --colour-gray: 109 110 113; /*  #6d6e71 */
-        --colour-gray-secondary: 116 134 155; /*  #74869b */
-        --colour-linkedin-blue: 23 134 177; /*  #1786b1 */
-        --colour-javascript: 255 215 0; /*  #ffd700 */
-        --colour-firebase: 255 153 0; /*  #ff9900 */
-        --colour-node: 62 134 61; /*  #3e863d */
-        --colour-backend: 77 19 0; /*  #4d1300 */
-        --colour-css: 163 13 138; /*  #a30d8a */
-        --colour-typescript: 48 117 191; /*  #3075bf */
-        --colour-nestjs: 212 33 72; /*  #d42148 */
-        --colour-nuxtjs: 2 40 50; /*  #022832 */
-        --colour-vscode: 58 168 240; /*  #3aa8f0 */
-        --colour-vite: 189 52 254; /*  #bd34fe */
-        --colour-mustard: 255 195 29; /*  #ffc31d */
-        --colour-ai: 3 227 252; /*  #03e3fc */
-        --colour-langchain: 111 252 3; /*  #6ffc03 */
-        --colour-python: 53 107 153; /*  #356B99 */
-        --colour-nitro: 247 119 176; /*  #f777b0 */
-        --colour-reactjs: 97 218 251; /*  #61dafb */
-        --colour-other: 238 95 83; /*  #ee5f53 */
-    }
-
-    html {
-        @apply bg-beige-light;
-    }
-
-    .blog-page {
-        @apply al-container text-secondary text-lg break-words;
-    }
-
-    .blog-page h1,
-    .blog-page h2,
-    .blog-page h3,
-    .blog-page h4,
-    .blog-page h5,
-    .blog-page h6 {
-        @apply font-bold my-4 text-secondary;
-    }
-
-    .blog-page h1 {
-        @apply text-4xl cursor-text;
-    }
-
-    .blog-page h1 a {
-        @apply pointer-events-none focus:outline-none;
-    }
-
-    .blog-page h2 {
-        @apply text-2xl sm:text-3xl cursor-text border-b border-green pb-1;
-    }
-
-    .blog-page h2 a {
-        @apply pointer-events-none focus:outline-none;
-    }
-
-    .blog-page h3 {
-        @apply text-xl sm:text-2xl cursor-text;
-    }
-
-    .blog-page h3 a {
-        @apply pointer-events-none focus:outline-none;
-    }
-
-    .blog-page h4 {
-        @apply text-lg sm:text-xl cursor-text;
-    }
-
-    .blog-page h4 a {
-        @apply pointer-events-none focus:outline-none;
-    }
-
-    .blog-page h5 {
-        @apply text-base sm:text-lg cursor-text;
-    }
-
-    .blog-page h5 a {
-        @apply pointer-events-none focus:outline-none;
-    }
-
-    .blog-page h6 {
-        @apply text-sm sm:text-base cursor-text;
-    }
-
-    .blog-page h6 a {
-        @apply pointer-events-none focus:outline-none;
-    }
-
-    .blog-page p {
-        @apply my-4;
-    }
-
-    .blog-page img {
-        @apply w-full h-full rounded-md mb-6;
-    }
-
-    .blog-page h1 code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page h2 code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page h3 code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page h4 code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page h5 code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page h6 code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page p code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page ol li {
-        @apply my-2 list-decimal list-outside relative left-6 pr-6;
-    }
-
-    .blog-page ul li {
-        @apply my-2 list-decimal list-outside relative left-6 pr-6;
-    }
-
-    .blog-page li code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    .blog-page code {
-        font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-    }
-
-    .blog-page pre {
-        font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-        @apply bg-secondary rounded-md text-base focus:outline-none;
-    }
-
-    .blog-page .code-toolbar .toolbar {
-        @apply !opacity-100;
-    }
-
-    .blog-page .code-toolbar .toolbar .toolbar-item span {
-        @apply bg-transparent shadow-none hover:bg-transparent hover:text-gray-secondary text-gray-secondary;
-    }
-
-    .blog-page hr {
-        @apply border-t border-green mt-4;
-    }
-
-    .blog-page blockquote {
-        @apply antialiased my-4 px-4 py-1 bg-green-blue text-secondary border-l-4 border-secondary rounded-md;
-    }
-
-    .blog-page :not(h1, h2, h3, h4, h5, h6) a {
-        @apply text-primary;
-    }
-
-    .blog-page table {
-        @apply w-full my-4 border-collapse overflow-x-auto;
-        display: block;
-        white-space: nowrap;
-    }
-
-    .blog-page th,
-    .blog-page td {
-        @apply border border-gray-secondary p-2 text-left;
-        white-space: normal;
-        min-width: 300px;
-    }
-
-    .blog-page th {
-        @apply bg-secondary text-white;
-    }
-
-    .blog-page tr:nth-child(even) {
-        @apply bg-beige-light;
-    }
-
-    .blog-page tr:nth-child(odd) {
-        @apply bg-beige;
-    }
-
-    .blog-page table code {
-        @apply text-code-inline-blue bg-gray-secondary bg-opacity-10 p-1 rounded-sm;
-    }
-
-    ::selection {
-        @apply bg-primary text-secondary;
-    }
+:root {
+    --color-primary: 238 95 83; /* #ee5f53 */
+    --color-primary-light: 241 145 139; /*  #f1918b */
+    --color-code-inline-blue: 41 90 146; /*  #295a92 */
+    --color-secondary: 23 51 83; /*  #173353 */
+    --color-secondary-light: 55 80 110; /*  #37506e */
+    --color-green-light: 0 221 130; /*  #00dd82 */
+    --color-green-blue: 191 217 219; /*  #bfd9db */
+    --color-green: 64 151 157; /*  #40979d */
+    --color-beige: 216 215 193; /*  #d8d7c1 */
+    --color-beige-light: 239 232 223; /*  #efe8df */
+    --color-beige-gray: 155 155 155; /*  #9b9b9b */
+    --color-gray: 109 110 113; /*  #6d6e71 */
+    --color-gray-secondary: 116 134 155; /*  #74869b */
+    --color-linkedin-blue: 23 134 177; /*  #1786b1 */
+    --color-javascript: 255 215 0; /*  #ffd700 */
+    --color-firebase: 255 153 0; /*  #ff9900 */
+    --color-node: 62 134 61; /*  #3e863d */
+    --color-backend: 77 19 0; /*  #4d1300 */
+    --color-css: 163 13 138; /*  #a30d8a */
+    --color-typescript: 48 117 191; /*  #3075bf */
+    --color-nestjs: 212 33 72; /*  #d42148 */
+    --color-nuxtjs: 2 40 50; /*  #022832 */
+    --color-vscode: 58 168 240; /*  #3aa8f0 */
+    --color-vite: 189 52 254; /*  #bd34fe */
+    --color-mustard: 255 195 29; /*  #ffc31d */
+    --color-ai: 3 227 252; /*  #03e3fc */
+    --color-langchain: 111 252 3; /*  #6ffc03 */
+    --color-python: 53 107 153; /*  #356B99 */
+    --color-nitro: 247 119 176; /*  #f777b0 */
+    --color-reactjs: 97 218 251; /*  #61dafb */
+    --color-other: 238 95 83; /*  #ee5f53 */
 }
 
-@layer components {
-    .al-container {
-        @apply container mx-auto max-w-5xl px-2 sm:px-4 lg:px-8;
+html {
+    @apply bg-beige-light;
+}
+
+.blog-page {
+    @apply al-container text-secondary text-lg break-words;
+}
+
+.blog-page h1,
+.blog-page h2,
+.blog-page h3,
+.blog-page h4,
+.blog-page h5,
+.blog-page h6 {
+    @apply font-bold my-4 text-secondary;
+}
+
+.blog-page h1 {
+    @apply text-4xl cursor-text;
+}
+
+.blog-page h1 a {
+    @apply pointer-events-none focus:outline-none;
+}
+
+.blog-page h2 {
+    @apply text-2xl sm:text-3xl cursor-text border-b border-green pb-1;
+}
+
+.blog-page h2 a {
+    @apply pointer-events-none focus:outline-none;
+}
+
+.blog-page h3 {
+    @apply text-xl sm:text-2xl cursor-text;
+}
+
+.blog-page h3 a {
+    @apply pointer-events-none focus:outline-none;
+}
+
+.blog-page h4 {
+    @apply text-lg sm:text-xl cursor-text;
+}
+
+.blog-page h4 a {
+    @apply pointer-events-none focus:outline-none;
+}
+
+.blog-page h5 {
+    @apply text-base sm:text-lg cursor-text;
+}
+
+.blog-page h5 a {
+    @apply pointer-events-none focus:outline-none;
+}
+
+.blog-page h6 {
+    @apply text-sm sm:text-base cursor-text;
+}
+
+.blog-page h6 a {
+    @apply pointer-events-none focus:outline-none;
+}
+
+.blog-page p {
+    @apply my-4;
+}
+
+.blog-page img {
+    @apply w-full h-full rounded-md mb-6;
+}
+
+.blog-page h1 code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page h2 code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page h3 code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page h4 code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page h5 code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page h6 code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page p code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page ol li {
+    @apply my-2 list-decimal list-outside relative left-6 pr-6;
+}
+
+.blog-page ul li {
+    @apply my-2 list-decimal list-outside relative left-6 pr-6;
+}
+
+.blog-page li code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+.blog-page code {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.blog-page pre {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    @apply bg-secondary rounded-md text-base focus:outline-none;
+}
+
+.blog-page .code-toolbar .toolbar {
+    @apply !opacity-100;
+}
+
+.blog-page .code-toolbar .toolbar .toolbar-item span {
+    @apply bg-transparent shadow-none hover:bg-transparent hover:text-gray-secondary text-gray-secondary;
+}
+
+.blog-page hr {
+    @apply border-t border-green mt-4;
+}
+
+.blog-page blockquote {
+    @apply antialiased my-4 px-4 py-1 bg-green-blue text-secondary border-l-4 border-secondary rounded-md;
+}
+
+.blog-page :not(h1, h2, h3, h4, h5, h6) a {
+    @apply text-primary;
+}
+
+.blog-page table {
+    @apply w-full my-4 border-collapse overflow-x-auto;
+    display: block;
+    white-space: nowrap;
+}
+
+.blog-page th,
+.blog-page td {
+    @apply border border-gray-secondary p-2 text-left;
+    white-space: normal;
+    min-width: 300px;
+}
+
+.blog-page th {
+    @apply bg-secondary text-white;
+}
+
+.blog-page tr:nth-child(even) {
+    @apply bg-beige-light;
+}
+
+.blog-page tr:nth-child(odd) {
+    @apply bg-beige;
+}
+
+.blog-page table code {
+    @apply text-code-inline-blue bg-gray-secondary/10 p-1 rounded-sm;
+}
+
+::selection {
+    @apply bg-primary text-secondary;
+}
+
+@utility al-container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: theme("maxWidth.5xl");
+    padding-left: theme("spacing.2");
+    padding-right: theme("spacing.2");
+
+    @media (min-width: theme("maxWidth.2xl")) {
+        padding-left: theme("spacing.4");
+        padding-right: theme("spacing.4");
+    }
+
+    @media (min-width: theme("maxWidth.5xl")) {
+        padding-left: theme("spacing.8");
+        padding-right: theme("spacing.8");
     }
 }
