--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@config "../../tailwind.config.js";
+@config "../../../tailwind.config.js";
 
 :root {
     --color-primary: 238 95 83; /* #ee5f53 */
