update: new article about decoupling systems with NestJS microservices and AWS

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -36,6 +36,7 @@
     --color-tech: 131 161 152; /*  #83a198 */
     --color-entertainment: 219 168 90; /*  #dba85a */
     --color-other: 238 95 83; /*  #ee5f53 */
+    --color-aws: 36 43 55; /*  #242B37 */
     /* Through The Lens tag colors */
     --color-cosmic-views: 91 95 255; /* #5B5FFF */
     --color-night-skies: 78 76 207; /* #4E4CCF */
