--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -37,6 +37,8 @@
     --color-entertainment: 219 168 90; /*  #dba85a */
     --color-other: 238 95 83; /*  #ee5f53 */
     --color-aws: 36 43 55; /*  #242B37 */
+    --color-advice: 139 92 246; /*  #8B5CF6 */
+    --color-productivity: 16 185 129; /*  #10B981 */
     /* Through The Lens tag colors */
     --color-cosmic-views: 91 95 255; /* #5B5FFF */
     --color-night-skies: 78 76 207; /* #4E4CCF */
