set the blog article

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -39,6 +39,7 @@
     --color-aws: 36 43 55; /*  #242B37 */
     --color-advice: 139 92 246; /*  #8B5CF6 */
     --color-productivity: 16 185 129; /*  #10B981 */
+    --color-devops: 37 99 235; /*  #2563EB */
     /* Through The Lens tag colors */
     --color-cosmic-views: 91 95 255; /* #5B5FFF */
     --color-night-skies: 78 76 207; /* #4E4CCF */
